# SaglikOcagiYonetimSistemi

./: CMakeLists.txt  Tanimlar.h  main.cpp
Veri/: Doktor.cpp  Doktor.h  Hasta.cpp  Hasta.h  Hemsire.cpp  Hemsire.h  Ilac.cpp  Ilac.h  Insan.cpp  Insan.h  Recete.cpp  Recete.h  SaglikOcagi.cpp  SaglikOcagi.h  Tetkik.cpp  Tetkik.h  Ziyaret.cpp  Ziyaret.h
